--- a/index.html
+++ b/index.html
@@ -73,17 +73,27 @@
     .media-container {
       display: none;
       margin-top: 20px;
-      text-align: center; /* Centrar el contenido */
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 400px;
+      position: relative;
     }
     .media-container img, .media-container video {
       max-width: 80%;
       border-radius: 15px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      animation: fadeIn 0.5s ease-in-out;
       cursor: pointer;
+      opacity: 0;
+      transition: opacity 1s ease;
+      position: absolute;
+    }
+    .mostrar {
+      opacity: 1 !important;
     }
     video {
-      display: none;
+      display: block;
     }
   </style>
 </head>
@@ -110,7 +120,7 @@
     </div>
 
     <div class="media-container" id="mediaContainer">
-      <img id="imagen-amor" src="" onclick="siguienteMedia()" style="display: none;">
+      <img id="imagen-amor" src="" onclick="siguienteMedia()">
       <video id="video-amor" autoplay loop onclick="siguienteMedia()">
         <source src="" type="video/mp4">
         Tu navegador no soporta video.
@@ -123,13 +133,16 @@
   <script>
     const imagenes = [
       "https://i.postimg.cc/yxPBSRzG/IMG-20240115-WA0067-1.jpg",
+      "https://i.postimg.cc/HLS42YQP/IMG-20240112-WA0013.jpg",
       "https://i.postimg.cc/qMnwTdTz/20231223-232201.jpg",
-      "https://i.postimg.cc/HLS42YQP/IMG-20240112-WA0013.jpg"
+      "https://i.postimg.cc/d1LRNb6Q/20240207-150646.jpg",
+      "https://i.postimg.cc/jq69HND8/VID-20240124-WA0032-exported-366.jpg",
+      "https://i.postimg.cc/Kj5HmSXX/Screenshot-20250420-171620-3.png"
     ];
 
     const videos = [
       "https://raw.githubusercontent.com/Braindeiko01/MILU/main/VID-20240112-WA0095.mp4",
-      "https://raw.githubusercontent.com/Braindeiko01/MILU/main/VID-20240124-WA0032.mp4"
+      "https://raw.githubusercontent.com/Braindeiko01/MILU/main/VID-VID-20240202-WA0013.mp4.mp4"
     ];
 
     let mediaIndex = 0;
@@ -137,7 +150,7 @@
 
     function mostrarSorpresa() {
       document.getElementById('sorpresa').style.display = 'block';
-      document.getElementById('mediaContainer').style.display = 'block';
+      document.getElementById('mediaContainer').style.display = 'flex';
       document.getElementById('musica').play();
       mostrarMedia();
     }
@@ -146,17 +159,22 @@
       const img = document.getElementById('imagen-amor');
       const video = document.getElementById('video-amor');
 
-      img.style.display = 'none';
-      video.style.display = 'none';
+      img.classList.remove('mostrar');
+      video.classList.remove('mostrar');
 
       if (mostrandoImagenes) {
         img.src = imagenes[mediaIndex];
-        img.style.display = 'block';
+        video.pause();
+        setTimeout(() => {
+          img.classList.add('mostrar');
+        }, 50);
       } else {
         video.src = videos[mediaIndex];
         video.load();
-        video.style.display = 'block';
-        video.play();
+        setTimeout(() => {
+          video.classList.add('mostrar');
+          video.play();
+        }, 50);
       }
     }
 
@@ -166,7 +184,7 @@
 
       if (mediaIndex >= total) {
         mediaIndex = 0;
-        mostrandoImagenes = !mostrandoImagenes; // alternar
+        mostrandoImagenes = !mostrandoImagenes;
       }
 
       mostrarMedia();
@@ -186,3 +204,4 @@
   </script>
 </body>
 </html>
+
