--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
     }
     .media-container {
       position: relative;
-      height: 400px;
-      overflow: hidden;
+      height: auto;
       margin: 30px auto 0;
       justify-content: center;
       align-items: center;
       flex-direction: column;
+      width: 80%;
     }
     .media-container img, .media-container video {
       max-width: 100%;
@@ -94,9 +94,7 @@
       cursor: pointer;
       opacity: 0;
       transition: opacity 1s ease;
-      position: absolute;
-      top: 0;
-      left: 0;
+      position: relative;
     }
     .mostrar {
       opacity: 1 !important;
@@ -115,15 +113,15 @@
   <div class="section">
     <h2>Una cartita para ti ✨</h2>
     <div class="letter">
-      p>Hola mi vida ❤️‍🩹,</p>
+      <p>Hola mi vida ❤️‍🩹,</p>
       <p>Quise escribirte estas palabras para recordarte cuánto te amo y lo importante que eres para mí.
         Desde el primer día en que te conocí, ocupaste un lugar en mi corazón que nadie más podría llenar, te volviste esencial en mi vida.</p>
-      Te admiro profundamente. Eres una mujer valiosa, única y hermosa, y no me refiero solo a tu belleza exterior que es evidente, sino a todo lo que eres por dentro: tu nobleza, tu forma de pensar, tu manera de amar.
-       Me encantas en todos los sentidos. Me gustas por tus expresiones tan graciosas, por tu ternura, por esa forma tan especial que tienes de ser tú misma. Me fascina tu sinceridad, la confianza que me das, y el hecho de que contigo puedo hablar de todo, sin miedo ni filtros.
-      Tú me inspiras. Me das fuerzas para ser mejor cada día, y me haces soñar con un futuro a tu lado, aun con toda la distancia que nos separa mi corazon es solo tuyo nadie mas puede tenerlo.
-      Eres, sin duda, la mujer con la que quiero compartir mis días, mis metas, y mi amor.<p>
-      </p>Eres la mujer con la que sueño estar. 🌷<p>
-      </p> Con amor<p>
+      <p>Te admiro profundamente. Eres una mujer valiosa, única y hermosa, y no me refiero solo a tu belleza exterior que es evidente, sino a todo lo que eres por dentro: tu nobleza, tu forma de pensar, tu manera de amar.
+        Me encantas en todos los sentidos. Me gustas por tus expresiones tan graciosas, por tu ternura, por esa forma tan especial que tienes de ser tú misma. Me fascina tu sinceridad, la confianza que me das, y el hecho de que contigo puedo hablar de todo, sin miedo ni filtros.</p>
+      <p>Tú me inspiras. Me das fuerzas para ser mejor cada día, y me haces soñar con un futuro a tu lado, aun con toda la distancia que nos separa mi corazón es solo tuyo, nadie más puede tenerlo.</p>
+      <p>Eres, sin duda, la mujer con la que quiero compartir mis días, mis metas, y mi amor.</p>
+      <p>Eres la mujer con la que sueño estar. 🌷</p>
+      <p>Con amor,</p>
       <p>Tu bebé chiquito 🥰</p>
     </div>
     <button onclick="mostrarSorpresa()">Tocá si me amas 🥺</button>
