--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Para el amor de mi vida</title>
   <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
   <style>
@@ -46,17 +46,10 @@
       border-radius: 20px;
       box-shadow: 0 4px 8px rgba(180, 151, 189, 0.3);
       animation: openLetter 2s ease;
-      transform-origin: top center;
     }
     @keyframes openLetter {
-      0% {
-        transform: rotateX(90deg);
-        opacity: 0;
-      }
-      100% {
-        transform: rotateX(0deg);
-        opacity: 1;
-      }
+      0% { transform: rotateX(90deg); opacity: 0; }
+      100% { transform: rotateX(0deg); opacity: 1; }
     }
     button {
       padding: 10px 20px;
@@ -77,40 +70,26 @@
       margin-top: 20px;
       font-size: 1.5em;
       color: #c2185b;
-      animation: fadeIn 2s ease;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
     }
     .media-container {
       position: relative;
-      height: auto;
-      margin: 30px auto 0;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      width: 80%;
+      margin-top: 30px;
       display: none;
+      flex-direction: column;
+      align-items: center;
     }
     .media-container img, .media-container video {
-      max-width: 100%;
+      max-width: 90%;
       border-radius: 15px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      cursor: pointer;
       opacity: 0;
       transition: opacity 1s ease;
-      position: relative;
     }
     .mostrar {
       opacity: 1 !important;
-      display: block !important;
     }
-    video {
+    audio {
       display: none;
-    }
-    .audio-control {
-      margin-top: 15px;
     }
   </style>
 </head>
@@ -124,33 +103,31 @@
     <h2>Una cartita para ti ✨</h2>
     <div class="letter">
       <p>Hola mi vida ❤️‍🩹,</p>
-      <p>Quise escribirte estas palabras para recordarte cuánto te amo y lo importante que eres para mí.
-        Desde el primer día en que te conocí, ocupaste un lugar en mi corazón que nadie más podría llenar, te volviste esencial en mi vida.</p>
-      <p>Te admiro profundamente. Eres una mujer valiosa, única y hermosa, y no me refiero solo a tu belleza exterior que es evidente, sino a todo lo que eres por dentro: tu nobleza, tu forma de pensar, tu manera de amar.
-        Me encantas en todos los sentidos. Me gustas por tus expresiones tan graciosas, por tu ternura, por esa forma tan especial que tienes de ser tú misma. Me fascina tu sinceridad, la confianza que me das, y el hecho de que contigo puedo hablar de todo, sin miedo ni filtros.</p>
+      <p>Quise escribirte estas palabras para recordarte cuánto te amo y lo importante que eres para mí. Desde el primer día en que te conocí, ocupaste un lugar en mi corazón que nadie más podría llenar, te volviste esencial en mi vida.</p>
+      <p>Te admiro profundamente. Eres una mujer valiosa, única y hermosa, y no me refiero solo a tu belleza exterior que es evidente, sino a todo lo que eres por dentro: tu nobleza, tu forma de pensar, tu manera de amar. Me encantas en todos los sentidos. Me gustas por tus expresiones tan graciosas, por tu ternura, por esa forma tan especial que tienes de ser tú misma. Me fascina tu sinceridad, la confianza que me das, y el hecho de que contigo puedo hablar de todo, sin miedo ni filtros.</p>
       <p>Tú me inspiras. Me das fuerzas para ser mejor cada día, y me haces soñar con un futuro a tu lado, aun con toda la distancia que nos separa mi corazón es solo tuyo, nadie más puede tenerlo.</p>
       <p>Eres, sin duda, la mujer con la que quiero compartir mis días, mis metas, y mi amor.</p>
       <p>Eres la mujer con la que sueño estar. 🌷</p>
       <p>Con amor,</p>
       <p>Tu bebé chiquito 🥰</p>
     </div>
+
     <button onclick="mostrarSorpresa()">Tocá si me amas 🥺</button>
-    <div class="audio-control">
-      <button onclick="toggleMusica()">🎵 Pausar/Reproducir música</button>
-    </div>
+    <button onclick="toggleMusica()">🎵 Pausar/Reproducir música</button>
+
     <div class="surprise" id="sorpresa">
       🎁 Yo te amo muchisisisisisimooo maaaas, y deja de dejarme en visto o cuando te vea me vas a deber unos cuantos abrazos y besos 🥺.
     </div>
 
     <div class="media-container" id="mediaContainer">
-      <img id="imagen-amor" src="" onclick="siguienteMedia()">
-      <video id="video-amor" onclick="siguienteMedia()">
-        <source src="" type="video/mp4">
+      <img id="imagen-amor" onclick="siguienteMedia()">
+      <video id="video-amor" onclick="siguienteMedia()" loop muted playsinline>
+        <source id="video-source" src="" type="video/mp4">
         Tu navegador no soporta video.
       </video>
     </div>
 
-    <audio id="musica" src="https://raw.githubusercontent.com/Braindeiko01/MILU/refs/heads/main/MILO%20J%20-%20M.A.I%20(Video%20Oficial).mp3" loop playsinline></audio>
+    <audio id="musica" src="https://raw.githubusercontent.com/Braindeiko01/MILU/refs/heads/main/MILO%20J%20-%20M.A.I%20(Video%20Oficial).mp3" loop autoplay playsinline></audio>
   </div>
 
   <script>
@@ -175,8 +152,7 @@
 
     function mostrarSorpresa() {
       document.getElementById('sorpresa').style.display = 'block';
-      const container = document.getElementById('mediaContainer');
-      container.style.display = 'flex';
+      document.getElementById('mediaContainer').style.display = 'flex';
       document.getElementById('musica').play();
       mostrarMedia();
     }
@@ -184,50 +160,44 @@
     function mostrarMedia() {
       const img = document.getElementById('imagen-amor');
       const video = document.getElementById('video-amor');
+      const videoSrc = document.getElementById('video-source');
 
       img.classList.remove('mostrar');
       video.classList.remove('mostrar');
-      video.style.display = 'none';
+      video.pause();
 
       setTimeout(() => {
         if (mostrandoImagenes) {
           img.src = imagenes[mediaIndex];
           img.classList.add('mostrar');
-          video.pause();
-          video.src = "";
           intervalo = setTimeout(siguienteMedia, 3000);
         } else {
-          img.src = "";
-          img.classList.remove('mostrar');
-          video.src = videos[mediaIndex];
+          videoSrc.src = videos[mediaIndex];
+          video.load();
           video.classList.add('mostrar');
-          video.style.display = 'block';
-          video.onended = siguienteMedia;
           video.play();
+          intervalo = setTimeout(siguienteMedia, 7000);
         }
       }, 300);
     }
 
     function siguienteMedia() {
       clearTimeout(intervalo);
-
-      const total = mostrandoImagenes ? imagenes.length : videos.length;
       mediaIndex++;
-
+      const total = mostrandoImagenes ? imagenes.length : videos.length;
       if (mediaIndex >= total) {
         mediaIndex = 0;
         mostrandoImagenes = !mostrandoImagenes;
       }
-
       mostrarMedia();
     }
 
     function toggleMusica() {
-      const musica = document.getElementById('musica');
-      if (musica.paused) {
-        musica.play();
+      const audio = document.getElementById('musica');
+      if (audio.paused) {
+        audio.play();
       } else {
-        musica.pause();
+        audio.pause();
       }
     }
 
@@ -242,10 +212,6 @@
     }
 
     setInterval(crearCorazon, 500);
-
-    window.addEventListener('beforeunload', function() {
-      document.getElementById('musica').pause();
-    });
   </script>
 </body>
 </html>
