--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
       for (let i = 0; i < 8; i++) {
         setTimeout(() => {
           const heart = document.createElement('div');
-          heart.innerHTML = ['❤️', '💕', '💖', '💗', '💓'][Math.floor(Math.random() * 5)];
+          heart.innerHTML = ['❤️‍🩹','💗'][Math.floor(Math.random() * 5)];
           heart.classList.add('heart-burst');
           
           // Posicionar aleatoriamente cerca del botón
