--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
       { 
         tipo: 'imagen', 
         url: "https://i.postimg.cc/yxPBSRzG/IMG-20240115-WA0067-1.jpg",
-        caption: "Recuerdo hermoso juntos ❤️"
+        caption: "Recuerdo hermoso juntos ❤️‍🩹"
       },
       { 
         tipo: 'imagen', 
@@ -464,7 +464,7 @@
       { 
         tipo: 'imagen', 
         url: "https://i.postimg.cc/qMnwTdTz/20231223-232201.jpg",
-        caption: "Nuestra historia especial ❤️‍🩹"
+        caption: "Nuestra historia especial 🍷"
       },
       { 
         tipo: 'imagen', 
@@ -474,27 +474,27 @@
       { 
         tipo: 'imagen', 
         url: "https://i.postimg.cc/jq69HND8/VID-20240124-WA0032-exported-366.jpg",
-        caption: "Tu mirada es muy preciosa"
+        caption: "Ojala volver a esos dias que estabas cerquita"
       },
       { 
         tipo: 'imagen', 
         url: "https://i.postimg.cc/Kj5HmSXX/Screenshot-20250420-171620-3.png",
-        caption: "Que bonitos nos vemos"
+        caption: "Contigo todo es mas divertido"
       },
       { 
         tipo: 'video', 
         url: "https://raw.githubusercontent.com/Braindeiko01/MILU/main/VID-20240112-WA0095.mp4",
-        caption: "Te extraño cada día 💔"
+        caption: "Te extraño cada día mas 💔"
       },
       { 
         tipo: 'video', 
         url: "https://raw.githubusercontent.com/Braindeiko01/MILU/main/VID-20240202-WA0013.mp4",
-        caption: "Momentos que nunca olvidaré"
+        caption: "Momentos que jamas olvidaré"
       },
       { 
         tipo: 'video', 
         url: "https://raw.githubusercontent.com/Braindeiko01/MILU/refs/heads/main/VID-20240124-WA0033.mp4",
-        caption: "Tu sonrisa ilumina mi vida"
+        caption: "Tu sonrisaaaa dioooos, que hermosa eres mi vida"
       }
     ];
 
