--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
     </div>
 
     <div class="music-control" data-playing="true" onclick="toggleMusica()"></div>
-    <audio id="musica" src="https://raw.githubusercontent.com/Braindeiko01/MILU/refs/heads/main/MILO%20J%20-%20M.A.I%20(Video%20Oficial).mp3" loop autoplay></audio>
+    <audio id="musica" src="https://raw.githubusercontent.com/Braindeiko01/MILU/refs/heads/main/MILO%20J%20-%20M.A.I%20(Video%20Oficial).mp3" loop playsinline></audio>
   </div>
 
   <script>
