--- a/index.html
+++ b/index.html
@@ -425,11 +425,11 @@
     </div>
 
     <div class="button-container">
-      <button class="pulse-button" onclick="mostrarSorpresa()">Tocá si me amas 🥺</button>
+      <button class="pulse-button" onclick="mostrarSorpresa()">Tocá aqui si me amas mi vida 🫰 </button>
     </div>
 
     <div class="surprise" id="sorpresa">
-      🎁 Yo te amo muchisisisisisimooo maaaas, y deja de dejarme en visto o cuando te vea me vas a deber unos cuantos abrazos y besos 🥺.
+       Yo te amo muchisisisisisimooo maaaas, y deja de dejarme en visto 🥺 o cuando nos veamos de nuevo tendras que compensarme.
     </div>
 
     <div class="media-container" id="mediaContainer">
