--- a/index.html
+++ b/index.html
@@ -693,6 +693,10 @@
     // Controlar música
     function toggleMusica() {
       const audio = document.getElementById('musica');
+      if (document.hidden){
+        audio.pause();}else{
+        audio.play();}
+      
       const control = document.querySelector('.music-control');
       
       if (audio.paused) {
