--- a/index.html
+++ b/index.html
@@ -312,12 +312,12 @@
     /* Efecto de cinta en la parte superior de la página */
     .ribbon {
       position: absolute;
-      top: 1;
+      top: 0;
       right: 0;
-      width: 300px;
-      height: 222px;
-      overflow: hidden;
-      z-index: 2;
+      width: 800px;
+      height: 1000px;
+      overflow: visible;
+      z-index: 1;
     }
     .ribbon-content {
       position: absolute;
